Reduce padding on features list to fix wrapping
Since the borders were added to the box containers in 29a2468, the first
features list item would wrap, causing the container height to be
undesirably expanded.

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -93,6 +93,7 @@ hr {
   }
   ul {
     padding-top: 10px;
+    padding-left: 30px;
     font-size: 14pt;
     margin: 0;
   }
